// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DefaultWidget renders checkbox 1`] = `
<CheckboxWidget
  checked={true}
  config={Object {}}
  error=""
  isRequired={false}
  onBlur={[MockFunction]}
  onChange={[Function]}
  onFocus={[MockFunction]}
  path="test"
  schema={
    Object {
      "title": "Checkbox Input",
      "type": "boolean",
    }
  }
  type="checkbox"
  value={true}
/>
`;

exports[`DefaultWidget renders dropdown 1`] = `
<TextInputWidget
  config={Object {}}
  error=""
  isRequired={false}
  onBlur={[MockFunction]}
  onChange={[Function]}
  onFocus={[MockFunction]}
  path="test"
  schema={
    Object {
      "enum": Array [
        "foo",
        "bar",
        "baz",
      ],
      "title": "Text Input",
      "type": "string",
    }
  }
  value="foo"
/>
`;

exports[`DefaultWidget renders number input 1`] = `
<TextInputWidget
  config={Object {}}
  error=""
  isRequired={false}
  onBlur={[MockFunction]}
  onChange={[Function]}
  onFocus={[MockFunction]}
  path="test"
  schema={
    Object {
      "title": "Number Input",
      "type": "number",
    }
  }
  type="number"
  value={true}
/>
`;

exports[`DefaultWidget renders text input 1`] = `
<TextInputWidget
  config={Object {}}
  error=""
  isRequired={false}
  onBlur={[MockFunction]}
  onChange={[Function]}
  onFocus={[MockFunction]}
  path="test"
  schema={
    Object {
      "title": "Text Input",
      "type": "string",
    }
  }
  type="text"
  value="Hello World"
/>
`;
